crates/swc/tests/tsc-references/internalModules/moduleDeclarations/invalidNestedModules/input.ts/es5.2.minified/output.js
var A, M2;
!function(A) {
    var B, B, C;
    B = B || (B = {
    }), C = function() {
        "use strict";
        !function(instance, Constructor) {
            if (!(instance instanceof Constructor)) throw new TypeError("Cannot call a class as a function");
        }(this, C);
    }, B.C = C, A.B = B;
}(A || (A = {
})), (function(M2) {
    var X, X, Point;
    (X = X || (X = {
    })).Point = Point, M2.X = X;
})(M2 || (M2 = {
}));
